tests/NormalTests/paczka1/fuzzy1/69694714.err
Error in line 7: 33ToEqD9 S617 95,8
Error in line 14: S25 A112 87,5
Error in line 13: XFw S847 81,9
Error in line 12: BjJaU53ObT S25 76,7
Error in line 30: 33ToEqD9 S847 15,9
